Shrinkwrap selection broken in edit mode. #95288

Closed
opened 2022-01-28 16:35:32 +01:00 by Diogo Valadares Reis dos Santos · 17 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 22.1.2 30.0.14023.3004

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-27 22:21, hash: f2b24272dd
worked: version: 3.0.1

Short description of error
Whenever a modifier is added with shrinkwrap, the selection in edit mode doesn't match the visuals

Blender 3.01(working) Blender 3.1(broken)
2022-02-01 01-25-41.mp4 2022-02-01 01-18-42.mp4

Exact steps for others to reproduce the error

  • Open attached file
  • Try to select the vertices
    or
  • Add a shrinkwrap and a mirror modifier right before it.
  • Try to select something that should be far from the original position.

selection bug.blend

note: in the example I used mirror modifer, but it seems that any modifier is creating this problem

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 22.1.2 30.0.14023.3004 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-27 22:21, hash: `f2b24272dd` worked: version: 3.0.1 **Short description of error** Whenever a modifier is added with shrinkwrap, the selection in edit mode doesn't match the visuals |Blender 3.01(working)|Blender 3.1(broken) | -- | -- | |[2022-02-01 01-25-41.mp4](https://archive.blender.org/developer/F12838596/2022-02-01_01-25-41.mp4)|[2022-02-01 01-18-42.mp4](https://archive.blender.org/developer/F12838593/2022-02-01_01-18-42.mp4) **Exact steps for others to reproduce the error** - Open attached file - Try to select the vertices or - Add a shrinkwrap and a mirror modifier right before it. - Try to select something that should be far from the original position. [selection bug.blend](https://archive.blender.org/developer/F12831271/selection_bug.blend) note: in the example I used mirror modifer, but it seems that any modifier is creating this problem

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares
Diogo Valadares Reis dos Santos changed title from Selection does not work properly in edit mode with modifiers. to Mirror breaks selection in edit mode. 2022-01-28 16:36:16 +01:00
Diogo Valadares Reis dos Santos changed title from Mirror breaks selection in edit mode. to Shrinkwrap selection broken in edit mode. 2022-01-28 16:40:52 +01:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Thanks for the report. Could you check if this worked in 3.0. A known working version helps a lot when investigating a bug.

Thanks for the report. Could you check if this worked in 3.0. A known working version helps a lot when investigating a bug.

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

I got no problems on 3.0.1

I got no problems on 3.0.1

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'

Looking at the video and the file, what I could notice is that the On Cage option of the last modifier on the stack is disabled.
https://docs.blender.org/manual/en/dev/modeling/modifiers/introduction.html#bpy-types-modifier-show-on-cage

So, as far as I can see, it's not a bug, but a misunderstanding.

Looking at the video and the file, what I could notice is that the `On Cage` option of the last modifier on the stack is disabled. https://docs.blender.org/manual/en/dev/modeling/modifiers/introduction.html#bpy-types-modifier-show-on-cage So, as far as I can see, it's not a bug, but a misunderstanding.

sorry, that modifier stack in the video is a bit misleading. the bug still occurs even without those last two shrinkwraps. The .blend file don't have those, and also as said before, it doesn't occur 3.01 and before

sorry, that modifier stack in the video is a bit misleading. the bug still occurs even without those last two shrinkwraps. The .blend file don't have those, and also as said before, it doesn't occur 3.01 and before

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I misunderstood the bug, apologies. I can confirm.
It was a recently introduced regression. I'm bisecting to find the commit...

I misunderstood the bug, apologies. I can confirm. It was a recently introduced regression. I'm bisecting to find the commit...

Added subscriber: @Sergey

Added subscriber: @Sergey

It is difficult to bisect this bug, due to a crash that was resolved in 974981a637.
So since that fix mentions another commit, I'm assuming that 0f89bcdbeb introduced the bug.
Cc. @Sergey

It is difficult to bisect this bug, due to a crash that was resolved in 974981a637. So since that fix mentions another commit, I'm assuming that 0f89bcdbeb introduced the bug. Cc. @Sergey

This issue was referenced by 71b451bb62

This issue was referenced by 71b451bb628f47b8fe103fe151330030195bd498

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-02-02 10:38:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95288
No description provided.